@@ -12,6 +12,7 @@ class Net::SSLeay {
   use Net::SSLeay::X509;
   use Net::SSLeay::X509_NAME;
   use Net::SSLeay::SSL_SESSION;
+  use Net::SSLeay::OCSP_ONEREQ;
   
   INIT {
     &init();
