@@ -3,6 +3,29 @@
 
 class Net::SSLeay::OCSP_REQUEST : pointer {
   
+  allow Net::SSLeay::OCSP;
+  
+  # Fields
+  has ocsp_certids_list : List of Net::SSLeay::OCSP_CERTID;
+  
+  # Class Methods
+  private static method new_with_pointer : Net::SSLeay::OCSP_REQUEST ($pointer : Address, $options : object[] = undef) {
+    
+    my $self = new Net::SSLeay::OCSP_REQUEST;
+    
+    Fn->set_pointer($self, $pointer);
+    
+    $self->init($options);
+    
+    return $self;
+  }
+  
+  protected method init : void ($options : object[] = undef) {
+    
+    my $certs_list = List->new(new Net::SSLeay::OCSP_CERTID[0]);
+    $self->{ocsp_certids_list} = $certs_list;
+  }
+  
   # Instance Method
   native method DESTROY : void ();
   
