@@ -12,6 +12,7 @@
     * Add Net::SSLeay::X509#check_issued method.
     * Add Net::SSLeay::OCSP_ONEREQ class.
     * Add Net::SSLeay::OCSP_ONEREQ#DESTROY method.
+    * Add Net::SSLeay::OCSP#request_add0_id method.
 0.013 2024-11-14
   [New Features]
     * Add Net::SSLeay::OCSP#response_status_str method.
